--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </main>
 
         <footer class="footer">
-            <h3 class="footer__heading">© 2024 Around The U.S.</h2>
+            <p class="footer__heading">© 2024 Around The U.S.</p>
         </footer>
 
     <script src="scripts/index.js"></script>
