--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </section>
-            <section class="popup popup--show">
+            <section class="popup ">
                 <div class="popup__container">
                     <!-- Botón de cierre en la esquina superior derecha -->
                     <div class="popup__content">
