--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Ciudades, Valles, Lagos" />
     <meta name="author" content="Jorge Flores Partida" />
     <title>Around from us</title>
-    <link rel="stylesheet" href="/pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
