--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
                     <div class="elements__item">
                         <img src="/images/yosemite.png" alt="Yosemite" class="elements__img-yosemite">
-                        <div class="elements__text">Yosemite <span class="element__heart"> <img class="element__heart-like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
+                        <div class="elements__text">Yosemite <span class="element__heart"> <img class="element__like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
                     </div>
                     <div class="elements__item">
                         <img src="images/louise.png" alt="Louise" class="elements__img-louise">
-                        <div class="elements__text">Louise <span class="element__heart"> <img class="element__heart-like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
+                        <div class="elements__text">Louise <span class="element__heart"> <img class="element__like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
                     </div>
                     <div class="elements__item">
                         <img src="images/montanas-calvas.png" alt="Montañas Calvas" class="elements__img-montanas">
@@ -53,15 +53,15 @@
                     </div>
                     <div class="elements__item">
                         <img src="images/latemar.png" alt="Latemar" class="elements__img-latemar">
-                        <div class="elements__text">Latemar <span class="element__heart"> <img class="element__heart-like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
+                        <div class="elements__text">Latemar <span class="element__heart"> <img class="element__like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
                     </div>
                     <div class="elements__item">
                         <img src="images/vanois.png" alt="Vanois" class="elements__img-vanois">
-                        <div class="elements__text">Vanois <span class="element__heart"> <img class="element__heart-like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
+                        <div class="elements__text">Vanois <span class="element__heart"> <img class="element__like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
                     </div>
                     <div class="elements__item">
                         <img src="images/braies.png" alt="Braies" class="elements__img-braies">
-                        <div class="elements__text">Braies <span class="element__heart"> <img class="element__heart-like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
+                        <div class="elements__text">Braies <span class="element__heart"> <img class="element__like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
                     </div>
                 </div>
             </section>
