--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                     <div class="elements__item">
                         <img src="/images/yosemite.png" alt="Yosemite" class="elements__img-yosemite">
-                        <div class="elements__text">Yosemite <span > <img class="element__like" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
+                        <div class="elements__text">Yosemite <span > <img class="element__png" src="/images/Vector.png" alt="aqui deberia de haber un corazon"></span></div>
                     </div>
                     <div class="elements__item">
                         <img src="images/louise.png" alt="Louise" class="elements__img-louise">
