--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                 <div class="profile__info">
                     <div class="profile__info-item">
                         <h1 id="profile__info-name" class="profile__name">Jacques Cousteau</h1>
-                        <a href="#" class="profile__edit-button">
-                            <img src="images/edit-button.png" alt="aqui deberia de haber una imagen" >
                             
-                        </a>
+                            <div class="profile__edit-button">
+                                <a href="#" >
+                                    <img class="ancho" src="images/edit-button.png" alt="aqui deberia de haber una imagen" >
+                                </a>
+                            </div>
                     </div>
                     <h2 class="profile__info-explorador">Explorador</h2>
                 </div>
